fix it to work on mobile device

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
@@ -12,13 +13,9 @@ body {
   height: 100vh;
   justify-content: center;
   color: #fff;
-  overflow: hidden;
-}
-
-.bck-img {
-  position: absolute;
-  z-index: -1;
+  background: url("https://images.unsplash.com/photo-1494500764479-0c8f2919a3d8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
   background-size: cover;
+  overflow: hidden;
 }
 
 h2 {
@@ -66,4 +63,14 @@ h2 {
   height: 40px;
   font-size: 30px;
   background-color: rgba(10, 150, 136, 0.9);
+}
+
+@media (max-width: 550px) {
+  .clock {
+    flex-direction: column;
+  }
+
+  .clock #ampm {
+    bottom: -40px;
+  }
 }
